// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/integrations/EditIncomingWebhook should have called submitHook when editIncomingHook is initiated (no server error) 1`] = `
<AbstractIncomingWebhook
  action={[Function]}
  enablePostIconOverride={true}
  enablePostUsernameOverride={true}
  footer={
    Object {
      "defaultMessage": "Update",
      "id": "update_incoming_webhook.update",
    }
  }
  header={
    Object {
      "defaultMessage": "Edit",
      "id": "integrations.edit",
    }
  }
  initialHook={
    Object {
      "id": "id",
      "token": "token",
    }
  }
  loading={
    Object {
      "defaultMessage": "Updating...",
      "id": "update_incoming_webhook.updating",
    }
  }
  serverError=""
  team={
    Object {
      "id": "testteamid",
      "name": "test",
    }
  }
/>
`;

exports[`components/integrations/EditIncomingWebhook should have called submitHook when editIncomingHook is initiated (with data) 1`] = `
<AbstractIncomingWebhook
  action={[Function]}
  enablePostIconOverride={true}
  enablePostUsernameOverride={true}
  footer={
    Object {
      "defaultMessage": "Update",
      "id": "update_incoming_webhook.update",
    }
  }
  header={
    Object {
      "defaultMessage": "Edit",
      "id": "integrations.edit",
    }
  }
  initialHook={
    Object {
      "id": "id",
      "token": "token",
    }
  }
  loading={
    Object {
      "defaultMessage": "Updating...",
      "id": "update_incoming_webhook.updating",
    }
  }
  serverError=""
  team={
    Object {
      "id": "testteamid",
      "name": "test",
    }
  }
/>
`;

exports[`components/integrations/EditIncomingWebhook should have called submitHook when editIncomingHook is initiated (with server error) 1`] = `
<AbstractIncomingWebhook
  action={[Function]}
  enablePostIconOverride={true}
  enablePostUsernameOverride={true}
  footer={
    Object {
      "defaultMessage": "Update",
      "id": "update_incoming_webhook.update",
    }
  }
  header={
    Object {
      "defaultMessage": "Edit",
      "id": "integrations.edit",
    }
  }
  initialHook={
    Object {
      "id": "id",
      "token": "token",
    }
  }
  loading={
    Object {
      "defaultMessage": "Updating...",
      "id": "update_incoming_webhook.updating",
    }
  }
  serverError="error message"
  team={
    Object {
      "id": "testteamid",
      "name": "test",
    }
  }
/>
`;

exports[`components/integrations/EditIncomingWebhook should not call getIncomingHook 1`] = `
<LoadingScreen
  position="relative"
  style={Object {}}
/>
`;

exports[`components/integrations/EditIncomingWebhook should show AbstractIncomingWebhook 1`] = `
<AbstractIncomingWebhook
  action={[Function]}
  enablePostIconOverride={true}
  enablePostUsernameOverride={true}
  footer={
    Object {
      "defaultMessage": "Update",
      "id": "update_incoming_webhook.update",
    }
  }
  header={
    Object {
      "defaultMessage": "Edit",
      "id": "integrations.edit",
    }
  }
  initialHook={
    Object {
      "id": "id",
      "token": "token",
    }
  }
  loading={
    Object {
      "defaultMessage": "Updating...",
      "id": "update_incoming_webhook.updating",
    }
  }
  serverError=""
  team={
    Object {
      "id": "testteamid",
      "name": "test",
    }
  }
/>
`;

exports[`components/integrations/EditIncomingWebhook should show Loading screen when no hook is provided 1`] = `
<LoadingScreen
  position="relative"
  style={Object {}}
/>
`;
